Fixes for the stuck up ******

--- a/chamber/styles/main-large.css
+++ b/chamber/styles/main-large.css
@@ -7,6 +7,10 @@
         padding: 20px;
 	}
 
+    main {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
     nav ul {
 		justify-content: flex-end;
 		flex-direction: row;
